[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "A real-world OpenEnv environment for data cleaning"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[tool.openenv]
name = "data-cleaning-env"
version = "1.0.0"